--- a/AigisChecker/html/checker2.html
+++ b/AigisChecker/html/checker2.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="sortByRare(false);">
+<body onload="bodyOnload();">
     <div class="mainbody">
         <div class="Layout_header">
             <span class="title">千年戦争アイギス - ユニット所持チェッカー＋</span>
@@ -57,6 +57,7 @@
                 <input type="button" onclick="sortByEvent();      " value="入手先">
                 <input type="button" onclick="sortByAssign();     " value="所属">
                 <input type="button" onclick="sortByGenus();      " value="節分">
+                <input type="button" onclick="sortByYearGacha();  " value="年度ガチャ">
             </div>
 
             <div class=sidebox>
