Layout bottom block

--- a/AigisChecker/html/AigisChecker.html
+++ b/AigisChecker/html/AigisChecker.html
@@ -18,7 +18,7 @@
     <div class="mainbody">
 
         <div class="Layout_Mainblock" id="Layout_Mainblock">
-            <div class="Layout_header">
+            <div class="Layout_Header">
                 <span class="title">千年戦争アイギス - ユニット所持チェッカー＋</span>
             </div>
 
@@ -27,7 +27,7 @@
         </div>
 
         <div class="Layout_Sideblock">
-            <div class="Layout_header">
+            <div class="Layout_Header">
             </div>
 
             <div class="sidebox">
@@ -185,6 +185,13 @@
                     <label for="f69"><span>温泉</span></label>
                 </div>
             </div>
+        </div>
+
+        <div class="Layout_Bottom">
+            <br>All data are from <a href="http://usashoya.web.fc2.com/aigis/checklist/aigis_checklist.html">
+                [非公式]千年戦争アイギス - ユニット所持チェッカー</a>
+            <br> Copyright © <a href="https://aigis1000secretary.tw/github">aigis1000secretary</a>
+            <br> License is <a href="https://opensource.org/licenses/MIT">MIT</a><br>
         </div>
     </div>
 
