--- a/AigisChecker/html/AigisChecker.html
+++ b/AigisChecker/html/AigisChecker.html
@@ -188,8 +188,8 @@
         </div>
 
         <div class="Layout_Bottom">
-            <br>All data are from <a href="http://usashoya.web.fc2.com/aigis/checklist/aigis_checklist.html">
-                [非公式]千年戦争アイギス - ユニット所持チェッカー</a>
+            <br>All data are from <a href="http://millenniumwaraigis.wikia.com/wiki/Message_Wall:Lzlis">
+                AigisTools release 2</a>
             <br> Copyright © <a href="https://aigis1000secretary.tw/github">aigis1000secretary</a>
             <br> License is <a href="https://opensource.org/licenses/MIT">MIT</a><br>
         </div>
