select group method

--- a/AigisChecker/html/AigisChecker.html
+++ b/AigisChecker/html/AigisChecker.html
@@ -77,7 +77,7 @@
 
             <div class="sidebox">
                 一括選択/解除
-                <input type="button" onclick="undo(true);" value="戻す"> <br>
+                <input type="button" onclick="undo(true);" value="復元"> <br>
 
                 <div class="filterbox">
                     <!-- placeType -->
