--- a/AigisTactics/html/AigisTactics.html
+++ b/AigisTactics/html/AigisTactics.html
@@ -1,82 +1,99 @@
 <!DOCTYPE html>
-
+<!-- saved from url=(0060)https://www.w3schools.com/css/trycss_website_layout_blog.htm -->
 <html>
 
 <head>
   <meta charset="utf-8">
   <title>千年戦争アイギス - 作戦図＋</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- data -->
   <script src="./missionNameList.js"></script>
   <script src="./questList.js"></script>
   <script src="./hashList.js"></script>
+  <script src="./../../AigisChecker/html/cards.js"></script>
+
+  <!-- script -->
   <script src="./tactics.js"></script>
 
+  <!-- css -->
   <link href='Primary.css' rel='stylesheet' type='text/css' />
   <link href='LocationIcon.css' rel='stylesheet' type='text/css' />
 
 </head>
 
 <body onload="bodyOnload();">
-  <div class="mainbody">
 
-    <div class="Layout_Mainblock">
-      <div class="Layout_Header">
-        <span class="title">千年戦争アイギス - 作戦図＋</span>
-      </div>
+  <div class="header">
+    <h1>千年戦争アイギス - 作戦図＋</h1>
+  </div>
 
-      <!-- // init by js methods -->
-      <div class="mapbox">
+  <div class="row">
+
+    <div class="leftcolumn">
+
+      <div class="card">
+
         <div class="hr">
-          <select class="missionType" onchange="onChange(this);">
-            <option value="">＝＝分類＝＝</option>
-          </select>
-          <select class="mission" onchange="onChange(this);">
-            <option value="">＝＝ミッション＝＝</option>
-          </select>
-          <select class="quest" onchange="onChange(this);">
-            <option value="">＝＝クエスト＝＝</option>
-          </select>
+          <select id="missionType" onchange="onChange(this);"> </select>
+          <select id="mission" onchange="onChange(this);"> </select>
+          <select id="quest" onchange="onChange(this);"> </select>
 
-          <div class="rangebox" style=>
-            射程：
-            <input class="rangebox" type="number" value=260 onchange="onChangeRange(this);"></div>
+          <div class="inputbox"> 射程：
+            <input id="rangebox" type="number" value=260 onchange="onChangeInput(this);">
+          </div>
         </div>
 
-        <div class="mapimg" ondrop="drop(event);" ondragover="allowDrop(event);"
+        <div id="mapimg" class="mapimg" ondrop="onDrop(event);" ondragover="onDragOver(event);"
           style="background-image: url(./maps/4f414b3bb77dc850d6c0784c6e961bb6);">
-
-          <!-- <img class="icon" id="icon1" src="./icon.png" ondragstart="dragStart(event);"> -->
-
-        </div>
-        <div class="mapbox">
-        </div>
-
-        <div class="hr">
         </div>
 
       </div>
+
+      <div class="card">
+
+        <div class="hr">
+          <select id="rare" onchange="onChange(this);"> </select>
+          <select id="class" onchange="onChange(this);"> </select>
+          <select id="kind" onchange="onChange(this);"> </select>
+
+          <div class="inputbox"> フィルタ：
+            <input id="filterbox" type="text" value=260 onchange="onChangeInput(this);">
+          </div>
+        </div>
+
+        <div id="iconbox">
+
+        </div>
+
+      </div>
+
     </div>
 
-    <div class="Layout_Sideblock">
-      <div class="Layout_Header">
-      </div>
+    <div class="rightcolumn">
 
-      <div class="sidebox">
+      <div class="card">
         <a itemprop="url" href="https://twitter.com/Aigis1000/" target="_blank">▼千年戦争アイギスtwitter公式アカウント</a><br>
         <a itemprop="url" href="http://aigis1000.jp/" target="_blank">▼千年戦争アイギスA公式サイト</a><br>
         <a itemprop="url" href="https://www.youtube.com/channel/UCl8iPEgu_N6iEYGYoWXc3gA"
           target="_blank">▼YouTube「千年戦争アイギス」公式チャンネル</a><br>
       </div>
 
+      <!-- <div class="card"> </div> -->
+
+      <!-- <div class="card"> </div> -->
+
     </div>
 
-    <div class="Layout_Bottom">
-      <br>All data are from <a href="http://millenniumwaraigis.wikia.com/wiki/Message_Wall:Lzlis">
-        AigisTools release 2</a>
-      <br> Copyright © <a href="https://aigis1000secretary.tw/github">aigis1000secretary</a>
-      <br> License is <a href="https://opensource.org/licenses/MIT">MIT</a><br>
-    </div>
   </div>
+
+  <div class="footer">
+    All data are from <a href="http://millenniumwaraigis.wikia.com/wiki/Message_Wall:Lzlis">AigisTools release 2</a>
+    <br> Copyright © <a href="https://aigis1000secretary.tw/github">aigis1000secretary</a>
+    <br> License is <a href="https://opensource.org/licenses/MIT">MIT</a>
+  </div>
+
+
 
 </body>
 
