filter box method
fix github url

--- a/AigisTactics/html/AigisTactics.html
+++ b/AigisTactics/html/AigisTactics.html
@@ -39,7 +39,7 @@
           <select id="mission" onchange="onChangeSelect(this);"> </select>
           <select id="quest" onchange="onChangeSelect(this);"> </select>
 
-          <div class="inputbox"> 射程：
+          <div class="inputbox" style="float: right;"> 射程：
             <input id="rangebox" type="number" value=260 onchange="onChangeInput(this);">
           </div>
         </div>
@@ -53,12 +53,11 @@
       <div class="card">
 
         <div class="hr">
-          <select id="rare" onchange="onChangeSelect(this);"> </select>
-          <select id="class" onchange="onChangeSelect(this);"> </select>
-          <select id="kind" onchange="onChangeSelect(this);"> </select>
-
+          <!-- <select id="rare" onchange="onChangeSelect(this);"> </select> -->
+          <!-- <select id="class" onchange="onChangeSelect(this);"> </select> -->
+          <!-- <select id="kind" onchange="onChangeSelect(this);"> </select> -->
           <div class="inputbox"> フィルタ：
-            <input id="filterbox" type="text" value=260 onchange="onChangeInput(this);">
+            <input id="filterbox" type="text" onchange="onChangeInput(this);">
           </div>
         </div>
 
@@ -74,8 +73,8 @@
 
       <div class="card">
         <a itemprop="url" href="https://twitter.com/Aigis1000/" target="_blank">▼千年戦争アイギスtwitter公式アカウント</a><br>
-        <a itemprop="url" href="http://aigis1000.jp/" target="_blank">▼千年戦争アイギスA公式サイト</a><br>
-        <a itemprop="url" href="https://www.youtube.com/channel/UCl8iPEgu_N6iEYGYoWXc3gA"
+        <a itemprop="url" href="https://aigis1000.jp/" target="_blank">▼千年戦争アイギスA公式サイト</a><br>
+        <a itemprop="url" href="https://youtube.com/channel/UCl8iPEgu_N6iEYGYoWXc3gA"
           target="_blank">▼YouTube「千年戦争アイギス」公式チャンネル</a><br>
       </div>
 
@@ -89,7 +88,7 @@
 
   <div class="footer">
     All data are from <a href="http://millenniumwaraigis.wikia.com/wiki/Message_Wall:Lzlis">AigisTools release 2</a>
-    <br> Copyright © <a href="https://aigis1000secretary.tw/github">aigis1000secretary</a>
+    <br> Copyright © <a href="https://github.com/aigis1000secretary">aigis1000secretary</a>
     <br> License is <a href="https://opensource.org/licenses/MIT">MIT</a>
   </div>
 
