--- a/AigisChecker/html/AigisChecker.html
+++ b/AigisChecker/html/AigisChecker.html
@@ -82,9 +82,9 @@
         </div>
 
         <div class="Layout_Bottom">
-            <br>All data are from <a href="http://millenniumwaraigis.wikia.com/wiki/Message_Wall:Lzlis">
-                AigisTools release 2</a>
-            <br> Copyright © <a href="https://aigis1000secretary.tw/github">aigis1000secretary</a>
+            <br>All data are from <a href="http://millenniumwaraigis.wikia.com/wiki/Message_Wall:Lzlis"> AigisTools
+                release 2</a>
+            <br> Copyright © <a href="https://github.com/aigis1000secretary">aigis1000secretary</a>
             <br> License is <a href="https://opensource.org/licenses/MIT">MIT</a><br>
         </div>
     </div>
