--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -12,7 +12,8 @@
 
   <!-- script -->
   <script src="./script/AigisChecker.js"></script>
-  <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+  <script src="./script/html2canvas.js"></script>
+  <!-- <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script> -->
 
   <!-- css -->
   <link href='./style/Primary.css' rel='stylesheet' type='text/css' />
