--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -15,6 +15,8 @@
 
     <!-- script -->
     <script src="./script/AigisTactics.js"></script>
+    <script src="./script/html2canvas.js"></script>
+    <!-- <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script> -->
 
     <!-- css -->
     <link href='./style/Primary.css' rel='stylesheet' type='text/css' />
@@ -38,8 +40,6 @@
 
 <body onload="bodyOnload();" style="width: 1330px;">
 
-    <!-- <body style="width: 1330px;"> -->
-
     <div class="header">
         <h1>千年戦争アイギス - 作戦図＋</h1>
     </div>
@@ -56,7 +56,7 @@
                     <select id="quest" onchange="onChangeSelect(this);"> </select>
                 </div>
 
-                <!-- // init by js methods -->
+                <!-- init by js methods -->
                 <div id="mapimg" class="mapimg" style="background-image: url(./maps/4f414b3bb77dc850d6c0784c6e961bb6);"
                     onclick="onClick(event);" ondrop="onDrop(event);" ondragover="onDragOver(event);">
 
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-                <!-- // init by js methods -->
+                <!-- init by js methods -->
                 <div id="iconbox"></div>
 
             </div>
