layout css update

--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -28,13 +28,13 @@
                 max-width: 990px;
             }
 
-            .leftcolumn,
-            .rightcolumn {
-                min-width: 100%;
-                padding: 0px;
-            }
-        }
-    </style>
+      .row>.leftcolumn,
+      .row>.rightcolumn {
+        min-width: 100%;
+        padding: 0px;
+      }
+    }
+  </style>
 
 </head>
 
@@ -62,6 +62,16 @@
 
                 </div>
 
+            </div>
+
+            <div class="row">
+                <div class="leftcolumn">
+                    <div class="card"></div>
+                </div>
+
+                <div class="rightcolumn">
+                    <div class="card"></div>
+                </div>
             </div>
 
             <div class="card">
