--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -65,12 +65,13 @@
         <div class="leftcolumn" style="width: 40%;">
           <div class="card">
 
-            <div class="hr"> メモ生成 </div>
-
-            <div id="memoresult"> </div>
+            <div class="hr"> メモ生成
+              <input type="button" onclick="addMomebox();   " value="生成">
+            </div>
+            <!-- <div id="memoresult"> </div> -->
             <div class="inputbox">
               <textarea id="textbox" style="min-height: 20px; max-width: 100%;"></textarea>
-               <!-- onchange="onChangeInput(event);" onmouseup	="onChangeInput(event);" -->
+              <!-- onchange="onChangeInputMemobox(event);" onmouseup	="onChangeInputMemobox(event);" -->
             </div>
 
           </div>
