data output input method

--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -57,7 +57,7 @@
         </div>
         <!-- init by js methods -->
         <div id="mapimg" class="mapimg" style="background-image: url(./maps/4f414b3bb77dc850d6c0784c6e961bb6);"
-          title="mapimg" onclick="onClick(event);" ondrop="onDrop(event);" ondragover="onDragOver(event);"> </div>
+          title="" onclick="onClick(event);" ondrop="onDrop(event);" ondragover="onDragOver(event);"> </div>
       </div>
 
       <!-- tool box -->
