--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -49,7 +49,7 @@
         <a itemprop="url" href="http://aigis1000.jp/" target="_blank">▼千年戦争アイギスA公式サイト</a><br>
         <a itemprop="url" href="https://www.youtube.com/channel/UCl8iPEgu_N6iEYGYoWXc3gA"
           target="_blank">▼YouTube「千年戦争アイギス」公式チャンネル</a><br>
-        <a itemprop="url" href="./AigisTactics.html" target="_blank">▼千年戦争アイギス　作戦図＋</a><br>
+        <a itemprop="url" href="./AigisTactics.html">▼千年戦争アイギス　作戦図＋</a><br>
 
       </div>
 
