--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -60,7 +60,8 @@
         </div>
         <!-- init by js methods -->
         <div id="mapimg" class="mapimg" style="background-image: url(./maps/4f414b3bb77dc850d6c0784c6e961bb6);" title=""
-          onclick="onClickMapimg(event);" ondrop="onDrop(event);" ondragover="onDragOver(event);"> </div>
+          onclick="onClickMapimg(event);" ondrop="onDrop(event);" ondragover="onDragOver(event);">
+        </div>
       </div>
 
       <!-- tool box -->
@@ -172,6 +173,8 @@
         <a itemprop="url" href="https://aigis1000.jp/" target="_blank">▼千年戦争アイギスA公式サイト</a><br>
         <a itemprop="url" href="https://youtube.com/channel/UCl8iPEgu_N6iEYGYoWXc3gA"
           target="_blank">▼YouTube「千年戦争アイギス」公式チャンネル</a><br>
+      </div>
+      <div class="card">
         <a itemprop="url" href="./AigisChecker.html">▼千年戦争アイギス　ユニット所持チェッカー＋</a><br>
       </div>
 
