change load raw data method
CharaDatabase maker

--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -8,10 +8,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- data -->
-  <script src="./script/missionNameList.js"></script>
+  <script src="./script/missionTitleList.js"></script>
   <script src="./script/questList.js"></script>
   <script src="./script/mapHashList.js"></script>
-  <script src="./script/cards.js"></script>
+  <script src="./script/cardList.js"></script>
 
   <!-- script -->
   <script src="./script/AigisTactics.js"></script>
