--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- data -->
-  <script src="./script/rawCardList.js"></script>
+  <script src="./script/rawCardsList.js"></script>
 
   <!-- script -->
   <script src="./script/AigisChecker.js"></script>
