--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -8,10 +8,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- data -->
-  <script src="./script/rawMissionTitleList.js"></script>
+  <script src="./script/rawMissionList.js"></script>
   <script src="./script/rawQuestList.js"></script>
   <script src="./script/rawMapHashList.js"></script>
-  <script src="./script/rawCardList.js"></script>
+  <script src="./script/rawCardsList.js"></script>
 
   <!-- script -->
   <script src="./script/AigisTactics.js"></script>
