--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -11,6 +11,7 @@
   <script src="./script/rawMissionList.js"></script>
   <script src="./script/rawQuestList.js"></script>
   <script src="./script/rawMapHashList.js"></script>
+  <script src="./script/rawMapDataList.js"></script>
   <script src="./script/rawCardsList.js"></script>
 
   <!-- script -->
