--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -91,7 +91,7 @@
         <input type="button" onclick="sortByEvent();      " value="入手先">
         <input type="button" onclick="sortByAssign();     " value="所属">
         <input type="button" onclick="sortByGenus();      " value="節分">
-        <input type="button" onclick="sortByYearGacha();  " value="年度ガチャ">
+        <input type="button" onclick="sortByYearGacha();  " value="年度ガチャ黒">
       </div>
 
       <div class="card">
