--- a/html/AigisTactics.html
+++ b/html/AigisTactics.html
@@ -137,6 +137,8 @@
                   <option value="787_001.png">　紅の霧</option>
                   <option value="785_001.png">　　砂嵐</option>
                   <option value="793_001.png">　　強風</option>
+                  <option value="275_001.png">　　熱波</option>
+                  <option value="275_001.png">　炎熱波</option>
                 </select>
               </div>
             </div>
